; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/hotplug/extr_acpiphp_glue.c_detect_ejectable_slots.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/hotplug/extr_acpiphp_glue.c_detect_ejectable_slots.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ACPI_TYPE_DEVICE = common dso_local global i32 0, align 4
@is_pci_dock_device = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @detect_ejectable_slots to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @detect_ejectable_slots(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @acpi_pci_detect_ejectable(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %14, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* @ACPI_TYPE_DEVICE, align 4
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @is_pci_dock_device, align 4
  %12 = bitcast i32* %3 to i8*
  %13 = call i32 @acpi_walk_namespace(i32 %9, i32 %10, i32 1, i32 %11, i8* %12, i32* null)
  br label %14

14:                                               ; preds = %8, %1
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @acpi_pci_detect_ejectable(i32) #1

declare dso_local i32 @acpi_walk_namespace(i32, i32, i32, i32, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
